<?xml version="1.0"?>
<package format="2">
  <name>keyboard_teleop</name>
  <version>0.0.0</version>
  <description>UR5 Keyboard Teleoperation</description>
  <maintainer email="normandmichael7@gmail.com">M. Normand</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslib</depend>
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>

</package>
