<?xml version="1.0"?>
<package format="2">
  <name>ur5_viz</name>
  <version>0.0.0</version>
  <description>UR5 Visualization</description>
  <maintainer email="normandmichael7@gmail.com">M. Normand</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>ur5_moveit_config</depend>
  <depend>ur_gazebo</depend>
  <depend>moveit</depend>
  <depend>moveit_servo</depend>
  <depend>gazebo_ros_pkgs</depend>
  <depend>gazebo_ros_control</depend>

</package>